# gl_c

./: .gitmodules  CMakeLists.txt
include/glad/: glad.c  glad.h
src/: simple.c
